log/build_2025-01-30_08-45-47/jacob_find_object_py/stderr.log
  File "/home/burger/lab2_object_finder_py/install/jacob_find_object_py/lib/python3.10/site-packages/jacob_find_object_py/find_object.py", line 24
    def _image_callback(self, frame)
                                    ^
SyntaxError: expected ':'

